Created a separate blueprint for landing page, number of views a particular trip can now be determined.

--- a/app/auth/templates/users/dashboard.html
+++ b/app/auth/templates/users/dashboard.html
@@ -43,7 +43,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text" href="/">
+                <a class="simple-text" href="/main/">
                     TravelPlanner
                 </a>
             </div>
