--- a/app/auth/templates/users/registration.html
+++ b/app/auth/templates/users/registration.html
@@ -27,15 +27,15 @@ Register
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">TravelPlanner</a>
+                    <a class="navbar-brand" href="/main/">TravelPlanner</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav  smooth-scroll navbar-right">
-                        <li><a href="/#intro">Intro</a></li>
-                        <li><a href="/#features">Features</a></li>
-                        <li><a href="/#pricing">Trip Plans</a></li>
-                        <li><a href="/#team">Team</a></li>
-                        <li><a href="/#contact">About</a></li>
+                        <li><a href="/main/#intro">Intro</a></li>
+                        <li><a href="/main/#features">Features</a></li>
+                        <li><a href="/main/#pricing">Trip Plans</a></li>
+                        <li><a href="/main/#team">Team</a></li>
+                        <li><a href="/main/#contact">About</a></li>
                         <li class="nav-button"><a href="/login">Sign In</a></li>
                         <li class="nav-button"><a href="#">Sign Up</a></li>
                     </ul>
