--- a/app/auth/templates/users/userprofile.html
+++ b/app/auth/templates/users/userprofile.html
@@ -43,7 +43,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text" href="/">
+                <a class="simple-text" href="/main/">
                     TravelPlanner
                 </a>
             </div>
@@ -62,11 +62,7 @@
                     </a>
                 </li>
                 <li>
-<<<<<<< HEAD
-                    <a href="/trips">
-=======
-                    <a href="/new-trip">
->>>>>>> c467f2f94e551be06f4b31e5175bf8599fa5ccd1
+                    <a href="/trips/">
                         <i class="pe-7s-note2"></i>
                         <p>Trips</p>
                     </a>
