--- a/app/trips/templates/addtrip.html
+++ b/app/trips/templates/addtrip.html
@@ -56,7 +56,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text">
+                <a class="simple-text" href="/main/">
                     TravelPlanner
                 </a>
             </div>
