--- a/app/auth/templates/users/friends.html
+++ b/app/auth/templates/users/friends.html
@@ -44,7 +44,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text" href="/">
+                <a class="simple-text" href="/main/">
                     TravelPlanner
                 </a>
             </div>
