--- a/app/landing/templates/view_trip.html
+++ b/app/landing/templates/view_trip.html
@@ -31,15 +31,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">TravelPlanner</a>
+                    <a class="navbar-brand" href="/main/">TravelPlanner</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav  smooth-scroll navbar-right">
-                        <li><a href="/#intro">Intro</a></li>
-                        <li><a href="/#features">Features</a></li>
-                        <li><a href="/#pricing">Trip Plans</a></li>
-                        <li><a href="/#team">Team</a></li>
-                        <li><a href="/#contact">About</a></li>
+                        <li><a href="/main/#intro">Intro</a></li>
+                        <li><a href="/main/#features">Features</a></li>
+                        <li><a href="/main/#pricing">Trip Plans</a></li>
+                        <li><a href="/main/#team">Team</a></li>
+                        <li><a href="/main/#contact">About</a></li>
                         <li class="nav-button"><a href="{{ label[2] }}">{{ label[0] }}</a></li>
                         <li class="nav-button"><a href="{{ label[3] }}">{{ label[1] }}</a></li>
                     </ul>
@@ -61,7 +61,7 @@
                                     <div class="panel-footer" align="left" style="display: inline-block; width: 100%;"> 
                                         <div class="row">
                                             &nbsp; From: {{ trips.tripDateFrom }} 
-                                            <a href="/view/{{ trips.tripName }}" target="_blank" class="btn btn-primary" style="float: right;">View Trip</a>
+                                            <a href="/main/view/{{ trips.tripName }}" target="_blank" class="btn btn-primary" style="float: right;">View Trip</a>
                                         </div>
                                         <div class="row">
                                             &nbsp; To: {{ trips.tripDateTo }}
