--- a/app/trips/templates/trip.html
+++ b/app/trips/templates/trip.html
@@ -44,7 +44,7 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a class="simple-text">
+                <a class="simple-text" herf="/main/">
                     TravelPlanner
                 </a>
             </div>
