Upload image feature added for users profie pic and trip thumbnail, refactored some codes and few bug fix

--- a/app/auth/templates/users/dashboard.html
+++ b/app/auth/templates/users/dashboard.html
@@ -125,8 +125,11 @@
                             <div class="content">
                                 <div class="author">
                                      <a href="#">
-                                    <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
-
+                                     {% if current_user.profile_pic=='default' %}
+                                        <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
+                                     {% else %}
+                                        <img class="avatar border-gray" src="{{ url_for('.static', filename='images/users/'+current_user.profile_pic) }} " alt="..."/>
+                                     {% endif %}
                                       <h4 class="title">{{username}}<br />
                                       </h4>
                                     </a>
