--- a/app/landing/templates/view_trip.html
+++ b/app/landing/templates/view_trip.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/font-awesome.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/pace.css') }}">
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/landing-style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('.static', filename='css/itenerary.css') }}">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -48,31 +49,120 @@
         </nav><br><br>
 
         <section id="pricing" class="pricing-section">
-            <div class="container">
-                <div class="row">
-                    <h3>{{ trips.tripName }}</h3>
-                    <div>
-                        <div class="col-sm-2 text-center">
-                            <div class="container" style="display:inline; width:100%;">
-                                <div class="panel panel-default bootcards-media" style="width:100%;"> 
-                                    <div class="panel-heading" align="left" style="width: 100%;">{{ trips.tripName }}</div>
-                                    <div class="panel-body" style="width: 100%; height: 100%;" align="center">
-                                    <img style="height: 100%; width: 100%; object-fit:contain;" src="https://i.ytimg.com/vi/QGiJFumHUPo/maxresdefault.jpg"/></div>
-                                    <div class="panel-footer" align="left" style="display: inline-block; width: 100%;"> 
-                                        <div class="row">
-                                            &nbsp; From: {{ trips.tripDateFrom }} 
-                                            <a href="/main/view/{{ trips.tripName }}" target="_blank" class="btn btn-primary" style="float: right;">View Trip</a>
-                                        </div>
-                                        <div class="row">
-                                            &nbsp; To: {{ trips.tripDateTo }}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="container pricing-section">
+              <header class="page-header">
+                <h1 style="color: #333;">{{ title }}</h1>
+              </header>
+              
+              <ul class="timeline">
+                <li><div class="tldate">Apr 2014</div></li>
+                
+                <li>
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>Surprising Headline Right Here</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3 hours ago</small></p>
                     </div>
-                </div>
-
+                    <div class="tl-body">
+                      <p>Lorem Ipsum and such.</p>
+                    </div>
+                  </div>
+                </li>
+                
+                <li class="timeline-inverted">
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>Breaking into Spring!</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 4/07/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>Hope the weather gets a bit nicer...</p>
+                        
+                      <p>Y'know, with more sunlight.</p>
+                    </div>
+                  </div>
+                </li>
+                
+                <li><div class="tldate">Mar 2014</div></li>
+                
+                <li>
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>New Apple Device Release Date</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/22/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>In memory of Steve Jobs.</p>
+                    </div>
+                  </div>
+                </li>
+                <li class="timeline-inverted">
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>No icon here</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/16/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>Here you'll find some beautiful photography for your viewing pleasure, courtesy of <a href="http://lorempixel.com/">lorempixel</a>.</p>
+                      
+                      <p><img src="http://lorempixel.com/600/300/nightlife/" alt="lorem pixel"></p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>Some Important Date!</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/03/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>Write up a quick summary of the event.</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="timeline-panel noarrow">
+                    <div class="tl-heading">
+                      <h4>Secondary Timeline Box</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3/01/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>This might be a follow-up post with related info. Maybe we include some extra links, tweets, user comments, photos, etc.</p>
+                    </div>
+                  </div>
+                </li>
+                
+                <li><div class="tldate">Feb 2014</div></li>
+                
+                <li class="timeline-inverted">
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>The Winter Months</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 02/23/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>Gee time really flies when you're having fun.</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="tl-circ"></div>
+                  <div class="timeline-panel">
+                    <div class="tl-heading">
+                      <h4>Yeah we're pretty much done here</h4>
+                      <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 02/11/2014</small></p>
+                    </div>
+                    <div class="tl-body">
+                      <p>Wasn't this fun though?</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
             </div>
         </section>
 
