--- a/app/auth/templates/users/edit_profile.html
+++ b/app/auth/templates/users/edit_profile.html
@@ -117,7 +117,7 @@
                             <div class="header">
                                 <h4 class="title">Edit Profile</h4>
                             </div>
-                            <form action="" method="POST" name="edit">
+                            <form action="" method="POST" name="edit" enctype="multipart/form-data">
                             {{form.hidden_tag()}}
                             <div class="content">
                                     <div class="row">
@@ -174,6 +174,13 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.file)}}
+                                            </div>
+                                        </div>
+                                    </div>
                                     <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
                                     <div class="clearfix"></div>
                             </div>
@@ -187,7 +194,12 @@
                             <div class="content">
                                 <div class="author">
                                      <a href="#">
-                                    <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
+                                    <!--<img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>-->
+                                    {% if current_user.profile_pic=='default' %}
+                                        <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
+                                     {% else %}
+                                        <img class="avatar border-gray" src="{{ url_for('.static', filename='images/users/'+current_user.profile_pic) }} " alt="..."/>
+                                     {% endif %}
 
                                       <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
                                          <small>{{current_user.username}}</small><br><br>
