--- a/app/landing/templates/trip-plans.html
+++ b/app/landing/templates/trip-plans.html
@@ -107,7 +107,7 @@
                                 <div class="panel panel-default bootcards-media" style="width:100%;"> 
                                     <div class="panel-heading" align="left" style="width: 100%;">{{ trip.tripName }}</div>
                                     <div class="panel-body" style="width: 100%; height: 100%;" align="center">
-                                    <img style="height: 100%; width: 100%; object-fit:contain;" src="https://i.ytimg.com/vi/QGiJFumHUPo/maxresdefault.jpg"/></div>
+                                    <img style="height: 100%; width: 100%; object-fit:contain;" src="{{ url_for('trip_blueprint.static', filename='images/trips/'+trip.img_thumbnail ) }} "/></div>
                                     <div class="panel-footer" align="left" style="display: inline-block; width: 100%;">
                                         <div class="row">
                                             &nbsp; From: {{ trip.tripDateFrom }} 
