--- a/app/auth/templates/admin/users.html
+++ b/app/auth/templates/admin/users.html
@@ -65,6 +65,12 @@
                         <p>Trips</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/admin/connections">
+                        <i class="pe-7s-graph"></i>
+                        <p>Connections</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
@@ -105,7 +111,10 @@
         </nav>
         <div class="container-fluid">
             <div class="card">
-                <a href="/admin/users/add" class="btn" role="button">Add User</a>
+                <a href="/admin/users/new" class="btn" role="button">Add User</a>
+                <a href="/admin/users/sort/admin" class="btn" role="button">Admin</a>
+                <a href="/admin/users/sort/moderator" class="btn" role="button">Moderator</a>
+                <a href="/admin/users/sort/user" class="btn" role="button">User</a>
                 <table class="table table-hover">
                     <thead>
                         <tr>
