--- a/app/auth/templates/admin/editusers.html
+++ b/app/auth/templates/admin/editusers.html
@@ -68,6 +68,12 @@
                         <p>Trips</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/admin/connections">
+                        <i class="pe-7s-graph"></i>
+                        <p>Connections</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
@@ -107,8 +113,6 @@
                 </div>
             </div>
         </nav>
-
-
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
@@ -169,7 +173,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-info btn-fill pull-right">Edit Profile</button>
+                                <button href="/admin/users/edit/{{username}}" type="submit" class="btn btn-info btn-fill pull-right">Edit Profile</button>
                                 <div class="clearfix"></div>
                             </div>
                         </form>
