--- a/app/auth/templates/admin/createusers.html
+++ b/app/auth/templates/admin/createusers.html
@@ -68,6 +68,12 @@
                         <p>Trips</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/admin/connections">
+                        <i class="pe-7s-graph"></i>
+                        <p>Connections</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
@@ -116,9 +122,21 @@
                         <div class="header">
                             <h4 class="title">Create Profile</h4>
                         </div>
-                        <form action="" method="POST" name="edit">
+                        <form action="/admin/users/create" method="POST" name="create">
                             {{form.hidden_tag()}}
                             <div class="content">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            {{wtf.form_field(form.username)}}
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            {{wtf.form_field(form.role_id)}}
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
