--- a/app/auth/templates/admin/admindashboard.html
+++ b/app/auth/templates/admin/admindashboard.html
@@ -59,6 +59,12 @@
                         <p>Trips</p>
                     </a>
                 </li>
+		<li>
+                    <a href="/admin/connections">
+                        <i class="pe-7s-graph"></i>
+                        <p>Connections</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
