--- a/app/landing/templates/index.html
+++ b/app/landing/templates/index.html
@@ -7,7 +7,7 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>{{ title }}</title>
 
-        <!-- Common plugins -->
+        <!-- Common plugins -->4
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/simple-line-icons.css') }}">
         <link rel="stylesheet" href="{{ url_for('.static', filename='css/font-awesome.min.css') }}">
