--- a/app/trips/templates/addItinerary.html
+++ b/app/trips/templates/addItinerary.html
@@ -10,7 +10,10 @@
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <!-- Bootstrap core CSS     -->
     <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
@@ -23,20 +26,12 @@
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link rel="stylesheet" href="{{ url_for('.static', filename='css//demo.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/simple-line-icons.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/font-awesome.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/pace.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/landing-style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/help.css') }}">
-    <link rel="stylesheet" href="{{ url_for('.static', filename='css/sweetalert.css') }}">
 
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" type='text/css' href="http://fonts.googleapis.com/css?family=Roboto:400,700,300">
     <link rel="stylesheet" href="{{ url_for('.static', filename='css/pe-icon-7-stroke.css') }}">
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
 </head>
 <body>
 
@@ -73,7 +68,7 @@
                 <li>
                     <a href="/trips">
                         <i class="pe-7s-note2"></i>
-                        <p>Trips</p>
+                        <p>{{ itineraries.tineraryName}}</p>
                     </a>
                 </li>
             </ul>
@@ -123,41 +118,73 @@
                     <div class="col-md-8">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Your Trips</h4>
-                                <h5><a href="/trips/createtrip" class="button">Add a Trip</a></h5>
+                                <h4 class="title">Add Itinerary</h4>
                             </div>
-                                <div class="row">
-                                    {% for trip in trips %}
-                                    <div class="col-sm-3 text-center">
-                                    <div class="container" style="display:inline; width:100%;">
-                                    <div class="panel panel-default bootcards-media" style="width:100%;">
-                                    <div class="panel-heading" align="left" style="width: 100%;">
-                                        {{ trip.tripName }}
-                                        <a href="/trips/{{ trip.tripName }}/edit" class="btn btn-primary" style="display: block; margin: 0 auto;">Edit</a>
-                                    </div>
-                                    <div class="panel-body" style="width: 100%; height: 100%;" align="center">
-                                    <img style="height: 100%; width: 100%; object-fit:contain;" src="https://i.ytimg.com/vi/QGiJFumHUPo/maxresdefault.jpg"/></div>
-                                    <div class="panel-footer" align="left" style="display: inline-block; width: 100%;">
-                                        <div class="row">
-                                            &nbsp; From: {{ trip.tripDateFrom }}
-                                        </div>
-                                        <div class="row">
-                                            &nbsp; To: {{ trip.tripDateTo }}
-                                            <br>&nbsp; {{ trip.viewsNum }} views
-                                            <a href="/trips/{{ trip.tripName }}/additineraries" class="btn btn-primary" style="display: block; margin: 0 auto;">Add Itineraries</a>
+                            <form action="" method="POST" name="edit">
+                            {{form.hidden_tag()}}
+                            <div class="content">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                {{wtf.form_field(form.itinerary_name)}}
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
+
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.itinerary_date_from, id="datepicker")}}
+                                                </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.itinerary_date_to, id="datepicker2")}}
+                                                </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.itinerary_time_from)}}
+                                                </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                                <div class="form-group">
+                                                    {{wtf.form_field(form.itinerary_time_to)}}
+                                                </div>
+                                        </div>
+                                    </div>
+
+                                    <button type="submit" class="btn btn-info btn-fill pull-right">Add</button>
+                                    <div class="clearfix"></div>
                             </div>
+                            </form>
                         </div>
-                                    {% endfor %}
-                                </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-user">
+                            <div class="image">
                             </div>
+                            <div class="content">
+                                <div class="author">
+                                     <a href="#">
+                                    <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
+
+                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
+                                         <small>{{current_user.username}}</small><br><br>
+                                         <small>"{{current_user.description}}"</small>
+                                      </h4>
+                                    </a>
+                                </div>
+                                <p class="description text-center"></p>
+                            </div>
+                            <hr>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
 
 </body>
