--- a/app/trips/templates/addtrip.html
+++ b/app/trips/templates/addtrip.html
@@ -168,7 +168,7 @@
                                      <a href="#">
                                     <img class="avatar border-gray" src="{{current_user.gravatar(size=256)}}" alt="..."/>
 
-                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br />
+                                      <h4 class="title">{{current_user.first_name}} {{current_user.last_name}}<br>
                                          <small>{{current_user.username}}</small><br><br>
                                          <small>"{{current_user.description}}"</small>
                                       </h4>
