--- a/app/landing/templates/index.html
+++ b/app/landing/templates/index.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <!--!<img src="http://wpthemess.net/wp-content/uploads/2014/05/metris-wordpress-theme-responsive.png" alt="" class="img-responsive">-->
-                        <img src="http://i.imgur.com/BXqdfzG.png" alt="" class="img-responsive">
+                        <img src="{{ url_for('.static', filename='images/misc/device.png') }}" alt="" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -308,7 +308,7 @@
                     <div class="col-sm-4 margin-b-30">
                     </div>
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Malik Maulana</h4>
                         <p>
                             Adviser<br>Mindanao State University-Iligan Institute of Technology
@@ -319,21 +319,21 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Seanne Canoy</h4>
                         <p>
                             BSCS-III Student<br>Mindanao State University-Iligan Institute of Technology
                         </p>
                     </div>  
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Joanna Ompoc</h4>
                         <p>
                             BSCS-III Student<br>Mindanao State University-Iligan Institute of Technology
                         </p>
                     </div>  
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Chezl Van</h4>
                         <p>
                             BSCS-IV Student<br>Mindanao State University-Iligan Institute of Technology
@@ -342,21 +342,21 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Shealtiel Cañon</h4>
                         <p>
                             BSCS-III Student<br>Mindanao State University-Iligan Institute of Technology
                         </p>
                     </div>  
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Dexter Esin</h4>
                         <p>
                             BSCS-IV Student<br>Mindanao State University-Iligan Institute of Technology
                         </p>
                     </div>  
                     <div class="col-sm-4 margin-b-30">
-                        <img style="height: 30%; width: 30%; object-fit:contain;" src="http://img.clipartall.com/45360730647c1f25009879900520a7-mad-scientist-clipart-2850_2667.jpg" alt="" class="img-circle">
+                        <img style="height: 30%; width: 30%; object-fit:contain;" src="{{ url_for('.static', filename='images/misc/ninja-simple-512.png') }}" alt="" class="img-circle">
                         <h4>Earl Mark E. Barangot</h4>
                         <p>
                             BSCS-III Student<br>Mindanao State University-Iligan Institute of Technology
